--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 webdriver-manager==4.0.2
 selenium==4.37.0
 python-dotenv
-pytest==8.4.2
+pytest
 playwright==1.55.0
 faker==37.11.0
 pytest-playwright-visual-snapshot==0.2.3
