--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,9 @@
 [pytest]
-addopts = -v -s --cache-clear --tb=short
+addopts = -v
+          -s
+          --cache-clear
+          --tb=short
+          --alluredir=allure-results
+          --clean-alluredir
+
+
