--- a/requirements.txt
+++ b/requirements.txt
@@ -40,7 +40,8 @@ email-validator==2.1.0
 # Testing
 pytest-asyncio==0.21.1
 httpx==0.25.2
-allure-pytest==2.13.2
+allure-pytest==2.15.3
+Pillow>=11.1.0
 
 # dev
 black== 25.9.0
